--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ button {
 
 .menu-btn {
   width: 24px;
-  height: 14px;
+  height: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -125,7 +125,7 @@ button {
 .modal-menu {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 100%;
   width: 100%;
   height: 100%;
   background-color: #07081c;
@@ -135,7 +135,7 @@ button {
   z-index: 999;
   opacity: 0;
   pointer-events: none;
-  /* transform: translateX(-100%); */
+  transform: translateX(-100%);
   transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out,
     transform 1s ease-in-out;
 }
@@ -155,7 +155,6 @@ button {
 
 .menu-logo-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 52px;
 }
@@ -163,6 +162,7 @@ button {
 .menu-logo-link {
   font-size: 28px;
   color: #fff;
+  margin-right: auto;
 }
 .close-btn {
   width: 32px;
@@ -238,12 +238,22 @@ button {
 /* #region Hero */
 .hero {
   padding: 100px 0 127px 0;
+  background-image: url(../images/mob/hero-bg.png);
+  background-repeat: no-repeat;
+  background-position: 0 -100px;
+  background-size: 320px 663px;
+  max-width: 320px;
+  margin: 0 auto;
+}
+
+@media (min-resolution: 192dpi) {
+  .hero {
+    background-image: url(../images/mob2x/hero-bg@2x.png);
+  }
 }
 
 .hero-container {
   position: relative;
-  max-width: 320px;
-  margin: 0 auto;
 }
 
 .hero-wrapper {
@@ -322,17 +332,17 @@ button {
 
 .hero-img {
   position: absolute;
-  top: -182px;
-  left: 0;
+  top: -88px;
+  right: 0;
+  width: 294px;
+  height: 456px;
 }
 
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    margin: 0 auto;
     padding: 60px 0 143px 0;
     background-image: url(../images/tab/hero-bg.png);
-    background-repeat: no-repeat;
     background-position: 0 0;
     background-size: cover;
   }
@@ -418,9 +428,7 @@ button {
   z-index: 999;
   opacity: 0;
   pointer-events: none;
-  /* transform: translateX(-100%); */
-  transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out,
-    transform 1s ease-in-out;
+  transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
 }
 
 .modal-overflay.is-open {
@@ -438,6 +446,7 @@ button {
   min-height: 1639px;
   padding: 48px 24px;
   background-color: #07081c;
+  transition: transform 250ms ease-in-out;
 }
 .close-btn.download {
   position: absolute;
@@ -486,11 +495,7 @@ button {
 
 .label-container {
   background-color: #07081c;
-  padding: 28px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
+  padding: 28px 0;
   border-radius: 6px;
   height: 390px;
   width: 228px;
@@ -500,36 +505,34 @@ button {
   background-color: transparent;
 }
 
-/* .label-container.two {
-  top: 0;
-  left: 50px;
-} */
-
 .file-icon {
   fill: #fff;
+  margin-bottom: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .label-title {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   color: #fff;
-}
-.label-list {
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  align-items: flex-start;
-  align-self: flex-start;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .label-text {
+  display: block;
+  margin-left: 38px;
+  margin-right: 30px;
+  margin-bottom: 14px;
+  align-self: flex-start;
   font-size: 14px;
   line-height: 1.71;
   color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
+  position: relative;
 }
 
 .label-text::before {
@@ -540,6 +543,9 @@ button {
   background-position: center center;
   min-width: 14px;
   height: 14px;
+  position: absolute;
+  top: 5px;
+  left: -18px;
 }
 
 .download-text {
