--- a/css/styles.css
+++ b/css/styles.css
@@ -1605,7 +1605,7 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 800px;
+  width: 100%;
   height: 400px;
   background-color: #07081c;
   padding: 30px;
@@ -1618,4 +1618,10 @@ button {
   position: absolute;
   top: 20px;
   right: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .video-player {
+    max-width: 800px;
+  }
 }
